--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "formik": "^2.4.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^5.2.0"
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.2.0",
+    "react-loader-spinner": "^6.1.6"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
